syntax = "proto3";
option java_package = "com.grpc.sample";

service kvStore {
    rpc get (GetRequest) returns (GetResponse);
    rpc put (PutRequest) returns (PutResponse);
    rpc pushMessage (PushMessageRequest) returns (PushMessageResponse);
    rpc getUpdateNode (UpdateNodeRequest) returns (UpdateNodeResponse);
    rpc syncMessage (SyncMessageRequest) returns (SyncMessageResponse);
}

message GetRequest {
    string requestKey = 1;
    string requestValue = 2;
}

message GetResponse {
    string responseKey = 1;
    string responseValue = 2;
    int32 status = 3;
}

message PutRequest {
    string requestKey = 1;
    string requestNewValue = 2;
    string requestOldValue = 3;
    int32 updateNode = 4;
    int64 updateNodeTimestamp = 5;
    repeated int32 deadRanks = 6;

}

message PutResponse {
    string responseKey = 1;
    string responseNewValue = 2;
    string responseOldValue = 3;
    int32 status = 4;
}

message PushMessageRequest {
    string pushKey = 1;
    string pushValue = 2;
    int64 pushTimestamp = 3;
    int32 updateNode = 4;
    int64 updateNodeTimestamp = 5;
    repeated int32 deadRanks = 6;
}

message PushMessageResponse {
    string pushResponseKey = 1;
    string pushResponseValue = 2;
    int64 pushResponseTimestamp = 3;
}

message UpdateNodeRequest {
    int32 updateNode = 1;
    int64 updateNodeTimestamp = 2;
    int32 sourceNode = 3;
}

message UpdateNodeResponse {
    int32 updateNode = 1;
    int64 updateNodeTimestamp = 2;
}
message Row {
    string key = 1;
    string value = 2;
    int64 timestamp = 3;
}
message SyncMessageRequest {
    int64 syncTimestamp = 1;
}

message SyncMessageResponse {
    repeated Row row = 1;
}